--- a/SchoolProject.API/appsettings.json
+++ b/SchoolProject.API/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "JwtSettings": {
+    "secret": "#werweqrqwerwqerqwerweqr()&&*(_(&^&^%%^&*()ewrqwerqwerqwerwq",
+    "issuer": "SchoolProject",
+    "audience": "WebSite",
+    "validateAudience": true,
+    "validateIssuer": true,
+    "validateLifeTime": true,
+    "validateIssuerSigningKey": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
