Add Refresh Token

--- a/SchoolProject.API/appsettings.json
+++ b/SchoolProject.API/appsettings.json
@@ -1,12 +1,15 @@
 {
-  "JwtSettings": {
+  "jwtSettings": {
     "secret": "#werweqrqwerwqerqwerweqr()&&*(_(&^&^%%^&*()ewrqwerqwerqwerwq",
     "issuer": "SchoolProject",
     "audience": "WebSite",
     "validateAudience": true,
     "validateIssuer": true,
     "validateLifeTime": true,
-    "validateIssuerSigningKey": true
+    "validateIssuerSigningKey": true,
+    "AccessTokenExpireDate": 1,
+    "RefreshTokenExpireDate": 20
+
   },
   "Logging": {
     "LogLevel": {
